--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,7 +1,9 @@
 ---
-driver_plugin: vagrant
+driver:
+  name: vagrant
+
 driver_config:
-  require_chef_omnibus: true
+  require_chef_omnibus: 12.3
 
 platforms:
 - name: ubuntu-14.04
